# API-SIMU

./: .env  Cargo.toml  LICENSE  README.MD  TODO.MD
migrations/: 20240510130910_create_users_table.up.sql
src/: main.rs  route.rs
src/controller/: healthcheck_controller.rs  mod.rs  user_controller.rs
src/model/: model.rs  schema.rs
src/service/: healthcheck_service.rs  mod.rs  user_service.rs
src/service/user/: mod.rs  user_service.rs  user_validator.rs
src/utils/: adapter.rs  factory.rs  mod.rs  observer.rs  singleton.rs  validation_chain.rs
